# brewery-digital-twin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
db/: schema.sql  seed.sql
scripts/: simulator.py
src/brewery_twin/: config.py  database.py  main.py  models.py  service.py  simulation.py
src/brewery_twin/static/: dashboard.html
tests/: test_oee.py  test_simulation.py
