[project]
name = "brewery-twin"
version = "0.1.0"
description = "A mini industrial digital twin for brewery process monitoring"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "psycopg[binary]>=3.2",
     "python-dotenv>=1.0",
     "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]